fix footer z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -802,6 +802,7 @@
  footer {
      background-color: #8f0303;
      position: relative;
+     z-index: 899;
      padding-bottom: 30px;
  }
 
@@ -812,6 +813,7 @@
      padding: 15px 5% 10px;
      /*#8f0303 = rgb(143, 3, 3)*/
      background-color: rgba(143, 3, 3, 1);
+
  }
 
  footer #contact_us h2 {
